adding voyager 6200 uc to exhibit 3

--- a/EBC_App/www/exhibit3.html
+++ b/EBC_App/www/exhibit3.html
@@ -155,28 +155,28 @@
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
-                                <div id="main-header">Voyager Legend CS</div>
-                                <div id="secondary-header">The office headset designed to go mobile.</div>
+                                <div id="main-header">Voyager 6200 UC</div>
+                                <div id="secondary-header">Versatile and ready for business.</div>
                             </div>
                             <div class="features">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
                                     <li class="main-feature" id="feature7">
-                                        Superior Call Management
+                                        Performance, Comfort and Versatility
                                         <ul>
-                                            <li>Multi-device connectivity lets you manage desk phone and mobile/tablet phone calls from a single headset.</li>
+                                            <li>Voyager 6200 UC features Plantronics clear talk technology, four omnidirectional microphones and enhanced noise canceling to optimize your voice and minimize background noise.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature8">
-                                        Outstanding Audio Quality
+                                        Connect to All Your Devices
                                         <ul>
-                                            <li>Precision tuned triple-mic with enhanced DSP for superior noise cancellation.</li>
+                                            <li>Equipped with multipoint technology, Voyager 6200 UC pairs with up to eight devices and can connect to any two at the same time.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature9">
-                                        Next Generation Technology
+                                        Customize Your Experience
                                         <ul>
-                                            <li>Smart sensor technology enables you to automatically answers calls simply by placing headset on your ear.</li>
+                                            <li>Customize your Voyager 6200 UC settings to suit your work style and personal preferences with Plantronics Hub, available for PC and Mac platforms and mobile (iOS/Android).</li>
                                         </ul>
                                     </li>
                                     <div class="show-more">
@@ -193,6 +193,7 @@
                                     <li class="view-more">
                                         View More...
                                     </li>
+                                    <img src="media/pltLogo.png" class="pltImage modalClick" onClick="video_url('https://www.youtube.com/embed/7Sa3L6eF0h8?rel=0&autoplay=1&showinfo=0&controls=2');">
                                 </ul>
                             </div>
                         </div>
