--- a/EBC_App/www/screensavers/VOYAGER6200UC-screensaver.html
+++ b/EBC_App/www/screensavers/VOYAGER6200UC-screensaver.html
@@ -21,7 +21,7 @@
             height: 500px;
             position: absolute;
             z-index: 10;
-            left: -5px;
+            left: 22px;
             top: 85px;
 
         }
@@ -53,8 +53,8 @@
                 </div>
                 <div class="col-6">
                     <div class="text-screensaver">
-                        <div id="main-header" class="header-0">Voyager Legend CS</div>
-                        <div id="secondary-header">The office headset designed to go mobile.</div>
+                        <div id="main-header" class="header-0">Voyager 6200 UC</div>
+                        <div id="secondary-header">Versatile and ready for business.</div>
                     </div>
                 </div>
         </div>
