updating exhibit 2 on 4/4/2018

--- a/EBC_App/www/exhibit2.html
+++ b/EBC_App/www/exhibit2.html
@@ -93,39 +93,39 @@
                     <div class="row padded">
                         <div class="col-6">
                             <div class="header-text">
-                                <div id="main-header">EncorePro 720</div>
-                                <div id="secondary-header">Anything else is just a headset.</div>
+                                <div id="main-header">Blackwire 5220 USB-C</div>
+                                <div id="secondary-header">Your voice, your day, your way.</div>
                             </div>
                             <div class="features">
                                 <h3>KEY FEATURES</h3>
                                 <ul>
                                     <li class="main-feature" id="feature4">
-                                        Luxurious Comfort. Distinctive Design.
+                                        All-day comfort and universal connectivity
                                         <ul>
-                                            <li>Elegant, satin finish and slim, stylish design make anyone proud to wear it.</li>
+                                            <li>Ergonomically designed, it's comfortable enough to wear all day, on your longest calls. To make it easier for you to work anywhere in the office, it also gives you the freedom to plug into the compatible device of your choice.</li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature5">
-                                        Exceptional Audio
+                                        Outstanding audio quality for better productivity
                                         <ul>
-                                            <li>Unique, extendable boom ensures precise positioning, enables optimal noise cancelation, and means customers hear every word.</li>
+                                            <li>With the Blackwire 5200 Series, you’ll be able to hear and be heard more clearly, enjoy conversation privacy and be more productive. </li>
                                         </ul>
                                     </li>
                                     <li class="main-feature" id="feature6">
-                                        Long-Term Reliability
+                                        Rapid deployment, future ready
                                         <ul>
-                                            <li>Designed for the rigors of call-intensive environments, minimizing operational disruptions and costly downtime.</li>
+                                            <li>Easy installation and UC Toolkit resources make IT deployment and management painless, while upgradable firmware and software ensure compatibilty and feature support.</li>
                                         </ul>
                                     </li>
                                     <div class="show-more">
                                         <li class="main-feature">
-                                            Conveniently Situated Microphone Arm
+                                            Lightweight design
                                         </li>
                                         <li class="main-feature">
-                                            Wideband Audio 
+                                            Wearing style choice
                                         </li>
                                         <li class="main-feature">
-                                            Reinforced, Lightweight Headband 
+                                            Dynamic EQ
                                         </li>
                                     </div>
                                     <li class="view-more">
@@ -138,7 +138,7 @@
                             <div class="center">
                                 <div class="spot-container">
                                     <div class="product">
-                                        <img src="media/exhibit2/product-1.png" class="prodImg">
+                                        <img src="media/exhibit2/product-1.png" id="blackwire">
                                     </div>
                                     <div id="spot4-off" class="spot"></div>
                                     <div id="spot5-off" class="spot"></div>
