--- a/EBC_App/www/screensavers/BLACKWIRE5220-screensaver.html
+++ b/EBC_App/www/screensavers/BLACKWIRE5220-screensaver.html
@@ -18,7 +18,7 @@
             height: 175px;
         }
         .prodImg{
-            height: 430px;
+            height: 630px;
             position: absolute;
             z-index: 10;
             left: 60px;
@@ -53,8 +53,8 @@
                 </div>
                 <div class="col-6">
                     <div class="text-screensaver">
-                        <div id="main-header" class="header-0">EncorePro 720</div>
-                        <div id="secondary-header">Anything else is just a headset.</div>
+                        <div id="main-header" class="header-0">Blackwire 5220 USB-C</div>
+                        <div id="secondary-header">Your voice, your day, your way.</div>
                     </div>
                 </div>
         </div>
